# orderbook-arena

./: .gitignore  CANDLE_FEATURE.md  README.md  launch.sh  project_summary.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/api/: error.rs  mod.rs  routes.rs  websocket.rs
backend/src/kraken/: client.rs  mod.rs  types.rs
backend/src/orderbook/: engine.rs  integration.rs  mod.rs  snapshot.rs  store.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CandleDisplay.jsx  Centerline.jsx  Controls.jsx  ErrorBoundary.jsx  OrderbookView.jsx  PriceColumn.jsx  PriceScale.jsx  TimeSlider.jsx
frontend/src/hooks/: useAggregatedCandle.js  useTimeTravel.js  useWebSocket.js
frontend/src/utils/: api.js  format.js
ignore_images/: Screen Recording 2025-12-09 at 18.57.31.mov
tasks/: prd-orderbook-visualizer.md  tasks-prd-orderbook-visualizer.md
